tests/NormalTests/paczka2/big_fuzzy/91447434.err
Error in line 6: zphZ A96 24,3
Error in line 21: i2u S740 40,5
Error in line 22: i2u S15 5,2
Error in line 29: S740 S15 28,6
Error in line 41: zphZ S309 4,0
Error in line 49: rfZX S309 80,4
Error in line 66: zphZ S15 285,9
Error in line 71: uzYMhh S309 4,2
Error in line 78: uzYMhh A96 60,2
Error in line 86: i2u A96 116,1
Error in line 94: rfZX S15 43,1
Error in line 103: i2u S309 92,7
Error in line 115: S740 S15 47,3
Error in line 111: fYtV S309 18,3
Error in line 122: fYtV A96 31,7
Error in line 127: uzYMhh S15 11,9
Error in line 129: S740 S309 63,9
Error in line 143: fYtV S309 4,3
Error in line 142: uzYMhh S309 30,5
Error in line 147: fYtV S15 6,7
Error in line 171: Xvg4b4 S309 97,83
Error in line 166: Xvg4b4 S15 88,1
Error in line 175: S740 S740 117,6
Error in line 180: zphZ S309 220,0
Error in line 199: Xvg4b4 S740 74,7
Error in line 206: S740 S740 39,5
Error in line 212: S740 S15 43,2
Error in line 215: S740 A96 40,2
Error in line 216: S740 S15 15,6
Error in line 218: rfZX S309 55,6
Error in line 213: fYtV S309 4,0
Error in line 200: uzYMhh S740 18,3
Error in line 233: S740 S15 97,8
Error in line 235: Xvg4b4 S309 25,0
Error in line 236: i2u S15 14,2
